Add support for jvm-opts and dev friendly jvm args